JBR-429 refactoring